Small fix to z-index in popup

--- a/site/css/wea.css
+++ b/site/css/wea.css
@@ -2000,7 +2000,7 @@ span[data-el='q'] span[data-el='q']::after{
     display:block;
     animation: fade-in .5s;
     margin-left: .15rem;
-    z-index:20;
+    z-index:9000;
 
 }
 
